<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="model"
            type="com.fluentbuild.apollo.views.onboarding.OnboardingViewModel" />
    </data>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="2"
        android:gravity="center_horizontal"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"
        android:paddingTop="32dp"
        android:paddingBottom="16dp">

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            />

        <ImageView
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:src="@drawable/ic_onboarding_512"
            android:contentDescription="@null"
            />

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="0.4"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:fontFamily="@string/fontFamilyMedium"
            android:gravity="center_horizontal"
            android:text="@string/onboardingTitle"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:gravity="center_horizontal"
            android:alpha="?alphaEmphasisHigh"
            app:html="@{@string/onboardingSubtitle}"
            tools:text="@string/onboardingSubtitle"
            />

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="0.6"
            />

        <Button
            android:id="@+id/getStartedButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/primaryWideButtonHeight"
            android:text="@string/onboardingActionGetStarted"
            style="@style/Widget.AppCompat.Button.Colored"
            />

        <TextView
            android:id="@+id/faqButton"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            android:text="@string/onboardingActionFaq"
            android:background="?selectableItemBackground"
            />
    </LinearLayout>
</layout>
