<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="model"
            type="com.fluentbuild.apollo.views.faq.FaqViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_margin="8dp"
            android:padding="8dp"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/navigationBack"
            android:src="@drawable/ic_arrow_back_normal_24"
            />

        <androidx.core.widget.NestedScrollView
            android:id="@+id/faqScrollView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:clipToPadding="false"
            android:paddingBottom="20dp"
            android:fillViewport="true">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:text="@string/faqTitle"
                    android:paddingTop="8dp"
                    android:paddingStart="@dimen/screenVerticalPadding"
                    android:paddingEnd="@dimen/screenVerticalPadding"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:alpha="?alphaEmphasisMedium"
                    android:text="@string/faqSubtitle"
                    android:paddingStart="@dimen/screenVerticalPadding"
                    android:paddingEnd="@dimen/screenVerticalPadding"
                    />

                <com.fluentbuild.apollo.views.faq.FaqListView
                    android:id="@+id/faqList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="16dp"
                    />
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

        <Button
            android:id="@+id/contactSupportButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/primaryWideButtonHeight"
            android:layout_marginStart="@dimen/screenVerticalPadding"
            android:layout_marginEnd="@dimen/screenVerticalPadding"
            android:layout_marginBottom="@dimen/screenHorizontalPadding"
            android:text="@string/faqContactSupportAction"
            style="@style/Widget.AppCompat.Button.Colored"
            tools:text="Back"
            />
    </LinearLayout>
</layout>
